--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -29,7 +29,7 @@
     "@types/jsonwebtoken": "8.5.6",
     "@types/mocha": "9.1.0",
     "@types/node": "16.11.7",
-    "@types/sequelize": "4.28.10",
+    "@types/sequelize": "^4.28.10",
     "@types/sinon": "10.0.11",
     "@types/validator": "13.6.6",
     "@typescript-eslint/eslint-plugin": "5.3.1",
